--- a/src/components/TwoColumnLayout/styles.module.css
+++ b/src/components/TwoColumnLayout/styles.module.css
@@ -5,6 +5,7 @@
   width: 100%;
   margin: 1rem 0;
   align-items: start;
+  padding: 1.5rem 0rem;
 }
 
 /* Column ratio variants */
